--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Soulmaker simple game engine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,16 @@
   },
   "homepage": "https://github.com/Rekseto/SoulMaker#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "chai": "^4.1.2",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.24.1",
+    "babel-cli": "^6.24.1"
   }
 }
