--- a/package.json
+++ b/package.json
@@ -32,6 +32,19 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.24.1",
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "eslint": "4.18.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "babel-eslint": "^8.2.1"
+  },
+  "dependencies": {
+    "colors": "^1.2.1",
+    "line-reader": "^0.4.0",
+    "prompt": "^1.0.0"
   }
 }
