--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "plugins": ["import", "standard", "prettier"],
+  "plugins": ["import", "standard"],
   "extends": [
     "eslint:recommended",
     "standard"
@@ -26,7 +26,7 @@
     "no-return-await" : [0],
     "indent": [2, 2],
     "quotes": [2, "double"],
-
+    "semi" : [0],
     "import/first": [0],
     "import/prefer-default-export": [0],
     "import/no-extraneous-dependencies": [0]
